# ai-sports-news

./: .env.example  .gitignore  LICENSE  README.md  archives.md  change_summary.md  index.md  landing.html  pyproject.toml
debug/: change_summary.md
output/: 2026-03-15_sports_daily.md  2026-03-16_sports_daily.md  2026-03-17_sports_daily.md  2026-03-18_sports_daily.md  2026-03-19_sports_daily.md  2026-03-21_sports_daily.md  2026-03-22_sports_daily.md  2026-03-23_sports_daily.md  2026-03-24_sports_daily.md  2026-03-25_sports_daily.md  2026-03-26_sports_daily.md  2026-03-27_sports_daily.md  2026-03-29_sports_daily.md  2026-03-31_sports_daily.md  2026-04-03_sports_daily.md  2026-04-04_sports_daily.md  2026-04-05_sports_daily.md  2026-04-06_sports_daily.md  2026-04-07_sports_daily.md  2026-04-19_sports_daily.md  2026-04-20_sports_daily.md  2026-04-21_sports_daily.md  2026-04-22_sports_daily.md  2026-04-26_sports_daily.md  2026-04-30_sports_daily.md  2026-05-01_sports_daily.md  2026-05-02_sports_daily.md
src/spnews/: cluster.py  config.py  db.py  fetcher.py  indexer.py  llm.py  main.py  report.py  summarizer.py
